--- a/HrLeaveManagement.Infrastructure/HrLeaveManagement.Infrastructure.csproj
+++ b/HrLeaveManagement.Infrastructure/HrLeaveManagement.Infrastructure.csproj
@@ -8,6 +8,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.4" />
+    <PackageReference Include="SendGrid" Version="9.29.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HrLeaveManagement.Application\HrLeaveManagement.Application.csproj" />
+    <ProjectReference Include="..\HrLeaveManagement.Domain\HrLeaveManagement.Domain\HrLeaveManagement.Domain.csproj" />
   </ItemGroup>
 
 </Project>
